Fix fullscreen close button alignment

--- a/src/scss/common/_fullscreen.scss
+++ b/src/scss/common/_fullscreen.scss
@@ -29,7 +29,7 @@
   }
 
   .show-on-fullscreen {
-    display: block !important;
+    display: grid !important;
     content-visibility: visible;
   }
 
